# wildzone

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  test.py
backend/: Dockerfile  entrypoint.sh  manage.py  pyproject.toml
backend/accounts/: models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/parsing/: apps.py  geo.py  service.py
backend/parsing/drivers/: manager.py
backend/parsing/scrapers/: base.py  ozon.py  wildberries.py
backend/products/: models.py  serializers.py  urls.py  views.py
backend/products/migrations/: 0001_initial.py  0002_alter_savedproduct_marketplace.py
backend/wildzone/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  client.ts  products.ts
frontend/src/components/: Navbar.tsx  ProductCard.tsx
frontend/src/pages/: FavouritesPage.tsx  HomePage.tsx  LoginPage.tsx  RegisterPage.tsx  SearchPage.tsx
